# Comfyui-anima-sampler

./: .comfyignore  .gitignore  AGENT.md  LICENSE  README.md  __init__.py  pyproject.toml
anima_sampler/: __init__.py  cfg_schedule.py  comfy_runner.py  experiment.py  flow_constants.py  flow_math.py  flow_sampler.py  latent_utils.py  node_constants.py  nodes.py  reference.py  repaint.py  repaint_routes.py  sampler_trace.py  sampler_types.py  sampling_loop.py  scheduler.py  sigma_schedule.py
anima_sampler/solvers/: __init__.py  basic.py  er.py  pc3.py  unipc.py
docs/: .gitignore  anima-model-card-notes.md  cosmos-predict2-2b-text2image-notes.md  flow-sampler-improvement-plan.md  sources.md
docs/experiment-feedback/: 2026-05-26-flow-cosmos-profile-plan.md  2026-05-26-flow-heun-cosmos-intuition.md  2026-05-26-flow-sampler-feedback.md  2026-05-26-rf-pc3-damped.md  2026-05-27-dynamic-cfg-evening-plan.md  2026-05-27-dynamic-cfg-rho7-results.md  README.md
example_workflows/: anima_t_reference_edit_route.json  anima_t_reference_native_repaint_route.json
examples/: anima_cosmos_repaint_tool.md
examples/workflows/: anima_better_sampler.json
tests/: test_experiment.py  test_flow_sampler.py  test_nodes.py  test_scheduler.py  test_workflows.py
